<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:title="@string/construction_menu_update" android:orderInCategory="0" android:showAsAction="never" android:icon="@drawable/menu_download"/>
	<item android:title="@string/construction_menu_upload" android:orderInCategory="1" android:showAsAction="never" android:icon="@drawable/menu_upload"/>
	<item android:title="二维码" android:orderInCategory="2" android:showAsAction="never"/>
	<item android:title="@string/construction_menu_findcard" android:orderInCategory="3" android:visible="false"/>
	<item android:title="@string/construction_menu_setting" android:orderInCategory="4" android:showAsAction="never" android:icon="@drawable/menu_setting"/>
	<item android:title="@string/construction_menu_logout" android:orderInCategory="5" android:showAsAction="never" android:icon="@drawable/menu_logout"/>
	<item android:title="@string/construction_menu_showall" android:checkable="true" android:orderInCategory="6" android:visible="false"/>

</menu>
