<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DEDEDE"
    android:orientation="vertical" >

    <RelativeLayout style="@style/action_bar" >

        <TextView
            android:id="@+id/patroladminconfig_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/title_back_bg"
            android:gravity="center"
            android:text="@string/btn_title_back"
            android:textColor="@color/white"
            android:textSize="@dimen/small" />

        <TextView
            android:id="@+id/patroladminconfig_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:textSize="@dimen/large" />
    </RelativeLayout>

    <GridLayout
        android:id="@+id/patroladminconfig_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:padding="5dp" >
        
        <Button
        	android:id="@+id/patroladminconfig_option_user"
        	android:text="@string/adminconfig_option_user" />
        
        <Button
        	android:id="@+id/patroladminconfig_option_group"
        	android:text="@string/adminconfig_option_group" />
        
        <Button
        	android:id="@+id/patroladminconfig_option_construction"
        	android:text="@string/adminconfig_option_construction" />
        
        <Button
        	android:id="@+id/patroladminconfig_option_card"
        	android:text="@string/adminconfig_option_card" />
        
        <Button
        	android:id="@+id/patroladminconfig_option_tag"
        	android:text="@string/adminconfig_option_tag" />
        
        <Button
        	android:id="@+id/patroladminconfig_option_plan"
        	android:text="@string/adminconfig_option_plan" />
        
    </GridLayout>

</LinearLayout>