<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DEDEDE"
    android:orientation="vertical" >

    <RelativeLayout style="@style/action_bar" >

        <TextView
            android:id="@+id/patroladmindata_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/title_back_bg"
            android:gravity="center"
            android:text="@string/btn_title_back"
            android:textColor="@color/white"
            android:textSize="@dimen/small" />

        <TextView
            android:id="@+id/patroladmindata_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:textSize="@dimen/large" />
    </RelativeLayout>
    
    <GridLayout
        android:id="@+id/patroladmindata_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:padding="5dp" >
        
        <Button
        	android:id="@+id/patroladmindata_historydata"
        	android:text="@string/admindata_historydata" />
        
        <Button
        	android:id="@+id/patroladmindata_tagdata"
        	android:text="@string/admindata_tagdata" />
        
        <Button
        	android:id="@+id/patroladmindata_tagstat"
        	android:text="@string/admindata_tagstat" />
        
        <Button
        	android:id="@+id/patroladmindata_planstat"
        	android:text="@string/admindata_planstat" />
        
    </GridLayout>

</LinearLayout>